# dML

./: README.md
model_mlx_migration/: .gitmodules  .verification_log  .verification_timestamp  2026-01-02-the-computer-crashed-several-models-and-downloads.txt  ARCHITECTURE.md  DATASET_TRAINING_INDEX.md  DATA_INDEX.md  DATA_PROCESSING_PLAN.md  MANAGER_2_Dec_2_2am_plans.md  MLX_MIGRATION_PLAN.md  MODEL_INDEX.md  PERFORMANCE_PROOF.md  PHASE1_CHECKLIST.md  PHASE2_CHECKLIST.md  PHASE3_CHECKLIST.md  PHASE4_CHECKLIST.md  PHASE5_CHECKLIST.md  PHASE6_CHECKLIST.md  README.md  benchmark_misaki  debug_decoder_layers.py  debug_tokens.py  eval_ctc_checkpoint.py  pyproject.toml  requirements-onnx.txt  test_misaki_g2p
model_mlx_migration/data/pseudo_labels/: librispeech_manifest_stats.json
model_mlx_migration/data/qa/: datasets.yaml
model_mlx_migration/data/v4_combined/: train_manifest_stats.json
model_mlx_migration/docs/: DATASET_LICENSES.md
model_mlx_migration/logs/: rich_decoder_v3_cached_20260101_045013.log.session  v4_extract_87k_20260101_095503.log.session
model_mlx_migration/mlx-madlad/: config.json
model_mlx_migration/outputs/prosody_tests/: prosody_baseline_20251216_160047.md
model_mlx_migration/papers/stt_2024_2026/: PAPER_INDEX.md  PAPER_INDEX_V2_ADDITIONS.md  STT_LITERATURE_REVIEW_2026.md  download_papers.sh
model_mlx_migration/results/: sota_compile_benchmark.json  sota_compile_benchmark_full.json
model_mlx_migration/scripts/: add_prosody_to_cache.py  analyze_adaptive_exit.py  analyze_duration_energy_by_emotion.py  analyze_ffn_bottleneck.py  average_all_ctc_checkpoints.sh  average_ctc_checkpoints.py  benchmark_all_models.py  benchmark_ane_hybrid.py  benchmark_audio_cleaning.py  benchmark_audio_loading.py  benchmark_batch_synthesis.py  benchmark_batched_decoder.py  benchmark_batched_decoder_fixed.py  benchmark_bf16.py  benchmark_c4_batch_reorder.py  benchmark_cosyvoice2.py  benchmark_cosyvoice2_speculative.py  benchmark_cosyvoice3_full_pipeline.py  benchmark_cosyvoice3_optimizations.py  benchmark_cosyvoice3_rtf.py  benchmark_ecapa_full.py  benchmark_ecapa_mlx.py  benchmark_encoder_cache.py  benchmark_encoder_vad.py  benchmark_encoder_vad_speedup.py  benchmark_f10_detailed.py  benchmark_f10_transcription.py  benchmark_f5tts_optimization.py  benchmark_fast_verification.py  benchmark_fused_ffn.py  benchmark_fused_vad.py  benchmark_fused_vad_v2.py  benchmark_j10_batch_server.py  benchmark_kokoro.py  benchmark_kokoro_e2e.py  benchmark_kokoro_optimizations.py  benchmark_kokoro_quantization.py  benchmark_kv_cache.py  benchmark_logprobs_skip.py  benchmark_m4.py  (+321 more)
model_mlx_migration/scripts/debug_archive/: analyze_conv_post_diff.py  analyze_f0_correlation.py  analyze_phase_wrapping.py  analyze_resblock_trace.py  check_conv_dilations.py  check_f0_blocks.py  check_f0_pool.py  check_f0_proj_weights.py  check_instance_norm_variance.py  check_istft_formula.py  check_pt_adain_keys.py  check_pt_istft_code.py  check_pt_stft_params.py  check_remaining_boundary.py  check_resblock_dilations.py  check_resblock_weights.py  check_text_encoder_lstm.py  compare_audio_pytorch_vs_mlx.py  compare_audio_quality.py  compare_conv_post.py  compare_decode_blocks.py  compare_decoder_output.py  compare_full_generator.py  compare_full_pipeline.py  compare_generator_components.py  compare_generator_full.py  compare_generator_internals.py  compare_individual_resblocks.py  compare_istft.py  compare_pytorch_resblock.py  compare_resblock_detailed.py  debug_actual_synthesis.py  debug_chunk312.py  debug_decoder_blocks.py  debug_decoder_parity.py  debug_decoder_signal.py  debug_encoder_layer_by_layer.py  debug_encoder_output.py  debug_forced_decode.py  debug_generator_clipping.py  (+101 more)
model_mlx_migration/scripts/wakeword_training/: inference.py  train_hey_agent.py
model_mlx_migration/src/adaptation/: __init__.py  ebats.py
model_mlx_migration/src/cpp/: CMakeLists.txt  README.md
model_mlx_migration/src/decoding/: __init__.py  rover.py  rover_integration.py
model_mlx_migration/src/kokoro/: .gitignore  CMakeLists.txt  FORWARD_PASS_PLAN.md  Makefile  README.md  g2p.cpp  g2p.h  kokoro.cpp  kokoro.h  model.cpp  model.h  prosody_adjust.cpp  prosody_adjust.h  prosody_parser.cpp  prosody_parser.h  prosody_types.h  simd_utils.h  test_g2p.cpp  test_integration.cpp  test_language_switching.cpp  test_mlx_load.cpp  test_model.cpp  test_pipeline.cpp  test_prosody.cpp  test_token_input.cpp  test_tokenizer.cpp  test_voice_order.cpp  test_voice_switching.cpp  tokenizer.cpp  tokenizer.h
model_mlx_migration/src/mlx_inference_engine/: .gitignore  CMakeLists.txt  MISAKI_G2P_README.md  Makefile  README.md  benchmark_kokoro.cpp  benchmark_misaki.cpp  benchmark_s2s.cpp  benchmark_whisper.cpp  cosyvoice3_model.cpp  cosyvoice3_model.h  grammar_parser.cpp  grammar_parser.h  llm_model.cpp  llm_model.h  misaki_g2p.cpp  misaki_g2p.h  mlx_inference_engine.cpp  mlx_inference_engine.hpp  output_writers.cpp  (+17 more)
model_mlx_migration/tests/: __init__.py  test_adaptive_router.py  test_audio_postprocess.py  test_cli.py  test_code_generator.py  test_condition_estimator.py  test_confidence_calibration.py  test_converter_infrastructure.py  test_cosyvoice2_converter.py  test_cosyvoice2_flow.py  test_cosyvoice2_llm.py  test_cosyvoice2_model.py  test_cosyvoice2_tokenizer.py  test_cosyvoice2_vocoder.py  test_cosyvoice3_e2e_pytorch.py  test_cosyvoice3_llm.py  test_cosyvoice3_numerical.py  test_cosyvoice3_whisper_validation.py  test_cpp_python_parity.py  test_ctc_loss_mlx.py  test_dashvoice_echo_cancel.py  test_dashvoice_metrics.py  test_dashvoice_pipeline.py  test_dashvoice_tts.py  test_dashvoice_voice_cloning.py  test_dashvoice_wakeword.py  test_dashvoice_websocket.py  test_data_quality.py  test_dual_stream.py  test_f5tts_utils.py  test_integration.py  test_kokoro_converter.py  test_kokoro_model.py  test_kokoro_phonemizer.py  test_kokoro_stft.py  test_llama_converter.py  test_llm_quality_judge.py  test_madlad_converter.py  test_marian_mlx.py  test_moe_lora_decoder.py  (+48 more)
model_mlx_migration/tools/: optimized_whisper.py  validate_quantized_kv.py
(+3670 files in other folders)
