[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-to-mlx"
version = "1.0.0"
description = "General-purpose AI model converter for migrating PyTorch models to Apple's MLX framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Andrew Yates"}
]
keywords = ["mlx", "pytorch", "apple-silicon", "machine-learning", "model-conversion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "mlx>=0.20.0",
    "mlx-lm>=0.20.0",
    "transformers>=4.40.0",
    "numpy>=1.24.0",
    "safetensors>=0.4.0",
    "tqdm>=4.65.0",
    "click>=8.1.0",
    "mlx-whisper>=0.1.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
onnx = [
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
]

[project.scripts]
pytorch-to-mlx = "tools.pytorch_to_mlx.cli:main"

[project.urls]
"Homepage" = "https://github.com/dropbox/dML/model_mlx_migration"
"Bug Tracker" = "https://github.com/dropbox/dML/model_mlx_migration/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:pkg_resources is deprecated as an API:UserWarning",
]
markers = [
    "e2e: End-to-end tests that use real models and data (may be slow)",
    "slow: Tests that take a long time to run",
    "benchmark: Performance benchmark tests",
    "zipformer: Tests for Zipformer model components",
    "numerical_validation: Tests that validate numerical equivalence between implementations",
    "data_qa: Data quality assurance tests",
    "data_qa_heavy: Heavy data quality tests (longer running)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["**/extern/**", "**/third_party/**", "tools/third_party"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E402",  # Module level import not at top (needed for sys.path modifications)
    "E501",  # Line too long - too many pre-existing violations in train_ctc.py
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
namespace_packages = true
