[package]
name = "dashflow-voice"
version = "0.1.0"
edition = "2021"
description = "Voice TTS/STT integration for DashFlow agent orchestration"
license = "MIT"
repository = "https://github.com/dropbox/dML/voice"
readme = "README.md"
keywords = ["voice", "tts", "stt", "dashflow", "agent"]
categories = ["multimedia::audio"]

[dependencies]
# gRPC / networking
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1.35", features = ["full", "sync", "time"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
chrono = "0.4"

[[example]]
name = "voice_agent"
path = "examples/voice_agent.rs"

[[example]]
name = "filtered_listen"
path = "examples/filtered_listen.rs"

[[example]]
name = "wake_word_agent"
path = "examples/wake_word_agent.rs"
